<resources>
    <string name="app_name">Navigation</string>
    <string name="where_is_a_coin">Where is my coin?</string>
    <string name="options">Options</string>
    <string name="about">About</string>
    <string name="exit">Exit</string>
    <string name="application_name">Application name: %1$s</string>
    <string name="version_number">Version number: %1$s</string>
    <string name="ok">OK</string>
    <string name="back">Back</string>
    <string name="choose_number_of_fists_for_your_game">Choose number of fists for your game</string>
    <string name="enable_timer">Enable timer</string>
    <string name="fists_count">Fists count: %1$s</string>
    <string name="pick_a_fist_with_a_coin">Pick a fist with a coin!</string>
    <string name="fist">Fist</string>
    <string name="fist_1">Fist 1</string>
    <string name="fist_number">Fist %1$s</string>
    <string name="you_won">You won!</string>
    <string name="to_main_menu">To Main Menu</string>
</resources>