<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".fragments.MenuFragment">

    <androidx.appcompat.widget.AppCompatButton
        android:layout_width="155dp"
        android:layout_height="wrap_content"
        android:text="@string/where_is_a_coin"
        android:textColor="@color/black" />

    <androidx.appcompat.widget.AppCompatButton
        android:layout_width="155dp"
        android:layout_height="wrap_content"
        android:text="@string/options"
        android:textColor="@color/black" />

    <androidx.appcompat.widget.AppCompatButton
        android:layout_width="155dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:text="@string/about"
        android:textColor="@color/black" />

    <androidx.appcompat.widget.AppCompatButton
        android:layout_width="155dp"
        android:layout_height="wrap_content"
        android:text="@string/exit"
        android:textColor="@color/black" />

</LinearLayout>